test/fail/Issue481a.agda
-- Andreas, 2012-10-18
module Issue481a where

open import Common.Issue481ParametrizedModule Set1

--  ommon.Issue481ParametrizedModule should not be in scope
module PM = Common.Issue481ParametrizedModule



